[package]
name = "rusty-wallpaper"
version = "0.2.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = "0.11.12"
serde_json = "1.0.0"
serde = { version = "1.0.0", features = ["derive"] }
rand = "0.7.3"
log = "0.4.17"
pretty_env_logger = "0.4.0"

[dependencies.windows]
version = "0.42.0"
features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]

[profile.release]
strip = true
lto = true